--- a/styles.css
+++ b/styles.css
@@ -11,4 +11,42 @@ body{
     height: 75px;
     width: 75px;
     margin: 15px;
+    font-size: 40px;
+}
+
+.number {
+    border: 1px solid greenyellow;
+    border-radius: 10px;
+}
+
+.operator {
+    border: 1px solid rgb(75, 47, 255);
+    border-radius: 10px;
+}
+.first-row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.screen {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    border: 1px solid rgb(9, 9, 9);
+    border-radius: 10px;
+    width: 300px;
+    height: 75px;
+    margin: 15px;
+}
+
+.clear{
+    border: 1px solid red;
+}
+
+.previous {
+    font-size: 20px;
+}
+
+.current{
+    font-size: 30px;
 }
